# portfolio-intelligence

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/scripts/: update_readme_snapshot.py
.github/workflows/: analyze-market.yml  analyze-us-market.yml
config/: market_symbols.txt
data/market/: nifty50_25years_ohlcv_1999_2026.csv
docs/backtests/: nifty50_1999_2026.md
pie/: __init__.py
pie/cli/: __init__.py  app.py  readme.py
pie/config/: __init__.py  loader.py  models.py
pie/core/: __init__.py  context.py  models.py  signal_state.py
pie/market/: __init__.py  strategy.py  trade_estimate.py
pie/market_data/: __init__.py  csv_loader.py  exceptions.py  snapshots.py  validation.py
pie/providers/: __init__.py  interfaces.py  registry.py  yahoo.py
pie/reporting/: __init__.py  market.py  readme_update.py  signal_status.py  snapshot.py
reports/market/: HDFCBANK_NS_20260724T075714Z.txt  HDFCBANK_NS_20260724T081210Z.txt  HDFCBANK_NS_20260724T100154Z.txt  ICICIBANK_NS_20260724T075715Z.txt  ICICIBANK_NS_20260724T081211Z.txt  ICICIBANK_NS_20260724T100155Z.txt  NSEI_20260723T200739Z.txt  (+52 more)
scripts/: append_history.py
state/: HDFCBANK.NS.json  ICICIBANK.NS.json  INFY.NS.json  NSEBANK.json  NSEI.json  QQQ.json  SBIN.NS.json  SPY.json  TCS.NS.json  WIPRO.NS.json
tests/: test_backtest.py  test_cli.py  test_config.py  test_csv_loader.py  test_indicators.py  test_market_data.py  test_market_reports.py  test_models.py  test_providers.py  test_strategy.py  test_trade_estimate.py  test_trend_engine.py  test_yahoo_provider.py
(+16 files in other folders)
