[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "portfolio-intelligence-engine"
version = "0.1.0"
description = "Portfolio Intelligence Engine core architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
pie = "pie.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["pie"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
